--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fontsource-variable/onest": "^5.0.3",
     "standard": "^17.1.0"
   },
   "eslintConfig": {
